Current
* add a simple GUI for tests and stats

Version 0.2.2
Date 5 february 2006
* the 'all' keyword can be used to launch all plugins
* added a report manager to show results in a html page with png images
* possibility of using several output file per plugin
* added a PNG output type
* new plugin : 2D distribution of the optimums positions, with optionnal PCA
* plots are considered as plugins

Version 0.2.1
Date 5 october 2005
* initial release (same version number as ometah)
* test module 
* several plots and report tools